--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  dotted_line: ^3.0.0
   google_fonts: ^2.1.0
 
 dev_dependencies:
